change the :host selector to body in styles, ya dumb dumb

--- a/1.1_basics/src/styles.css
+++ b/1.1_basics/src/styles.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:host {
+body {
   @apply m-16 block;
 }
 
-:host > * {
+body > * {
   @apply m-5;
 }
 
