--- a/4.1_custom-config-file--/src/styles.css
+++ b/4.1_custom-config-file--/src/styles.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:host {
+body {
   @apply m-16 block;
 }
 
-:host > * {
+body > * {
   @apply m-5;
 }
 
