--- a/5.1_advanced-directives--/src/styles.css
+++ b/5.1_advanced-directives--/src/styles.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:host {
+body {
   @apply m-16 block;
 }
 
-:host > * {
+body > * {
   @apply m-5;
 }
 
