--- a/5.1_advanced-functions-- /src/app/app.component.html
+++ b/5.1_advanced-functions-- /src/app/app.component.html
@@ -2,9 +2,7 @@
   Functions in Tailwind CSS
 </h1>
 
-<div class="text-xs flex whitespace-nowrap overflow-clip my-8">=^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^=
-  =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^=
-  =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= </div>
+<div class="text-xs flex whitespace-nowrap overflow-clip my-8">=^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= </div>
 
 <p class="my-5">Tailwind CSS has <a href="https://tailwindcss.com/docs/functions-and-directives#functions">two functions</a> (as of 3.1.8) that you can use to access Tailwind-y values.</p>
 
@@ -13,4 +11,4 @@
   <li><code>@screen</code></li>
 </ul>
 
-<main class="w-full m-10 p-10"></main>
+<main class="w-full my-10 p-10"></main>
