--- a/5.1_advanced-kui-tour-of-heroes-releases--/src/app/app.component.html
+++ b/5.1_advanced-kui-tour-of-heroes-releases--/src/app/app.component.html
@@ -1,4 +1,8 @@
 <header>
+  <div class="absolute top-2 right-2 z-50 dark:text-slate-100 dark:bg-slate-900 uppercase [font-size:0.5em] bg-slate-50 px-2 py-1 rounded-lg" (click)="onThemeToggle()">
+    {{theme}}
+  </div>
+  
   <h1 class="mane-title">
     <span class="salty" data-text="Tour of H">Tour of H</span>
     <span data-text="eroes">eroes</span>
