--- a/5.1_advanced-kui-tour-of-heroes-releases--/src/styles.scss
+++ b/5.1_advanced-kui-tour-of-heroes-releases--/src/styles.scss
@@ -1,11 +1,18 @@
+// Tailwind
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Global Styles */
 @import 'src/assets/fonts.scss';
 @import 'src/assets/colors.scss';
 @import 'src/assets/variables.scss';
 
-// Customizing KUI Base Variables
-// $base-bg: $hot-pink !default;
 
+// Customizing KUI Base Variables
+@import 'src/assets/main-dark.scss';
+
+// $base-bg: $hot-pink !default;
 $font-size: $horse !default;
 $font-size-xs: $cockroach !default;
 $font-size-sm: $mouse !default;
@@ -35,6 +42,7 @@ html {
 
 body {
   margin: 0;
+  @apply dark:bg-slate-800;
 }
 
 [data-text] {
@@ -45,6 +53,7 @@ body {
   font-family: 'pony';
   word-break: break-word;
   white-space: break-spaces;
+  @apply dark:text-[#a5e4eb];
   
   &.salty {
     -moz-font-feature-settings: "salt";
@@ -65,12 +74,14 @@ body {
   &::before {
     z-index: -1;
     color: $purple;
+    @apply dark:text-slate-900;
     font-family: 'pony-outline';
   }
 
   &::after {
     z-index: -2;
     color: #a5e4eb;
+    @apply dark:text-[#{$dark-blue}];
     font-family: 'pony-extrude';
   }
 }
