--- a/5.1_advanced-plugins--/src/app/app.component.html
+++ b/5.1_advanced-plugins--/src/app/app.component.html
@@ -1,29 +1,37 @@
-<h1 class="text-3xl font-bold underline my-5">
-  Welcome to ng-conf!
+<h1 class="text-3xl my-5">
+  Plugins
 </h1>
 <h2 class="text-2xl font-light my-5">
-  Let's learn Tailwind CSS
+  Forms
 </h2>
 
-<!-- At any screen size, I need to just one row of ascii kitty cats -->
-<!-- clue: one possible way of solving this whitespace-nowrap overflow-clip -->
-<div class="text-xs flex whitespace-nowrap overflow-clip">=^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^=
-  =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^=
-  =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= </div>
+<div class="text-xs flex whitespace-nowrap overflow-clip">=^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= </div>
 
-<!-- My font size is too small. -->
-<!-- clue: check out the other paragraph -->
-<!-- DO NOT add an additional element just to put the text-lg class on. DOM stucture should never be dictated by style need. IF this reuse bothers you, will talk about solutions later on. -->
-<p class="my-5 text-lg">I cannot wait to meet you all! This conference is my all time favorite and I am so humbled to get to
-  teach you all some UI skills.</p>
-<p class="text-lg">I have gone ahead and done the installing and config bits needed to use Tailwind within Angular.
-  Checkout the docs to see the steps I took:
-
-  <!-- I need a hover state and to be italic! -->
-  <a class="underline italic" href="https://tailwindcss.com/docs/guides/angular" target="_blank">Getting Started with Tailwind
-    CSS in Angular</a>.
-</p>
-
-<!-- I need a light purple bg and some space from my siblings. -->
-<!-- clue: try these classes bg-purple-100 text-purple-700 -->
-<button class="my-16 py-2 px-3 text-purple-500 text-xl">Let's Get Started</button>
+<!-- I don't what the forms plugin will do, but I assume I will need a form to style. Could you find one online and plop it in here? -->
+<!-- Had to install the plugin with npm then add the plugin to the tailwind config file. Pretty sure it just resets a ton of default form styles to make it easier to style them. -->
+<form class="flex flex-col">
+  <label for="name">Full name</label>
+  <input id="name" type="text" placeholder="" />
+  
+  <label for="email">Email address</label>
+  <input id="email" type="email" placeholder="john@example.com" />
+  
+  <label for="date">When is your event?</label>
+  <input id="date" type="date" />
+  
+  <label for="select">What type of event is it?</label>
+  <select id="select">
+    <option>Corporate event</option>
+    <option>Wedding</option>
+    <option>Birthday</option>
+    <option>Other</option>
+  </select>
+  
+  <label for="textarea">Additional details</label>
+  <textarea id="textarea" rows="3"></textarea>
+  
+  <label for="checkbox">
+    <input id="checkbox" type="checkbox" checked="">
+    <span>Email me news and special offers</span>
+  </label>
+</form>
