Finalize pugins demos

--- a/5.-1_advanced-plugins/src/app/app.component.html
+++ b/5.-1_advanced-plugins/src/app/app.component.html
@@ -1,3 +1,14 @@
+<h1 class="text-3xl font-bold underline my-5">
+  Welcome to ng-conf!
+</h1>
+<h2 class="text-2xl font-light my-5">
+  Let's learn Tailwind CSS
+</h2>
+
+<div class="text-xs flex whitespace-nowrap overflow-clip">=^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^=
+  =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^=
+  =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= </div>
+
 <h1 class="text-3xl my-5">
   Plugins
 </h1>
@@ -9,8 +20,6 @@
   =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^=
   =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= =^..^= </div>
 
-<!-- I don't what the forms plugin will do, but I assume I will need a form to style. Could you find one online and plop it in here? -->
-<!-- Had to install the plugin with npm then add the plugin to the tailwind config file. Pretty sure it just resets a ton of default form styles to make it easier to style them. -->
 <form class="flex flex-col">
   <label for="name">Full name</label>
   <input id="name" type="text" placeholder="" />
