--- a/5.1_advanced-kui-tour-of-heroes-releases--/src/app/sidebar/sidebar.component.html
+++ b/5.1_advanced-kui-tour-of-heroes-releases--/src/app/sidebar/sidebar.component.html
@@ -170,7 +170,7 @@
 
   <section aria-labelledby="r3-2021-section-header">
   <h2 id="r3-2021-section-header">R3 2021 Release</h2>
-
+    <!-- need to spend more time on customizing this for dark mode -->
     <kendo-card>
       <kendo-card-header>
         <h3>Heatmap Component</h3>
@@ -182,7 +182,8 @@
         dimensions. The X and Y values are discrete and can be set in any order.</p>
         <hr kendoCardSeparator />
           <main>
-            <kendo-chart
+            <p>Heatmap is commented out right now — under construction. Uncomment to see it.</p>
+            <!-- <kendo-chart
               [style.height.px]="200"
             >
               <kendo-chart-series>
@@ -200,7 +201,7 @@
                 <kendo-chart-y-axis-item [categories]="categories.y">
                 </kendo-chart-y-axis-item>
               </kendo-chart-y-axis>
-            </kendo-chart>
+            </kendo-chart> -->
           </main>
 
       </kendo-card-body>
