layout-full WIP, finalize MQ demo

--- a/2.0_layout-MQ/src/app/app.component.html
+++ b/2.0_layout-MQ/src/app/app.component.html
@@ -12,9 +12,6 @@
 </div>
 
 <div class="flex flex-col sm:flex-row gap-5 my-5">
-  <!-- My font size is too small. -->
-  <!-- clue: check out the other paragraph -->
-  <!-- DO NOT add an additional element just to put the text-lg class on. DOM stucture should never be dictated by style need. IF this reuse bothers you, will talk about solutions later on. -->
   <p class="text-lg">I cannot wait to meet you all! This conference is my all time favorite and I am so humbled to get to
     teach you all some UI skills.</p>
   <p class="text-lg">I have gone ahead and done the installing and config bits needed to use Tailwind within Angular.
@@ -29,6 +26,6 @@
   Let's Get Started
 </button>
 
-<button class="bg-slate-700 text-white py-2 px-3 text-xl mx-4 print:hidden" onclick="window.print()">
+<button class="bg-slate-700 text-white py-2 px-3 text-xl mx-4" onclick="window.print()">
   Print
 </button>
