--- a/2.1_layout-full/src/app/app.component.html
+++ b/2.1_layout-full/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- style the header so that our escape hatch is always on the left and our nav is always on the right (no matter the screen size) with a growing/shrinking middle gap -->
-<header class="grid grid-cols-2 gap-x-5 items-end">
+<header class="grid grid-cols-2 items-end">
 
   <img src="assets/azalea.png" alt="azalea flower logo" class="max-w-[100px] px-3 py-2">
 
