--- a/2.1_layout-full/src/app/app.component.html
+++ b/2.1_layout-full/src/app/app.component.html
@@ -1,16 +1,24 @@
-<!-- style the header so that our escape hatch is always on the left and our nav is always on the right (no matter the screen size) with a growing/shrinking middle gap -->
+<!-- Prompt: style the header so that our escape hatch is always on the left and our nav is always on the right (no matter the screen size) with a growing/shrinking middle gap -->
+<!-- Hint: It's grid time. -->
+
 <header class="grid grid-cols-2 items-end">
 
   <img src="assets/azalea.png" alt="azalea flower logo" class="max-w-[100px] px-3 py-2">
 
-  <!-- start with flex justify-center space-x-4 -->
+  <!-- start with flex justify-center -->
   <!-- prompt: our nav items need to align on the bottom of our header, change the classes to make it so! -->
   <!-- answer: items-end on grid above -->
 
-  <!-- prompt: we would like the nav items to align left with the rest of the page content -->
-  <!-- clue: justify the items to the right side -->
-  <!-- answer: justify-end -->
-  <nav class="flex justify-center space-x-4">
+  <!-- prompt: Let's wrap those nav items when there is no room for them. -->
+  <!-- clue: Feel free to sprinkle in some flex. -->
+  <!-- answer: flex-wrap -->
+
+  <!-- prompt: we would like the nav items to align left so that when wrapping they look a bit neater -->
+  <!-- clue: justify the items to the left side -->
+  <!-- answer: justify-start -->
+
+  <!-- This doesn't look great but you can now see all nav items on any screen size. We will fix up in next demo. -->
+  <nav class="flex flex-wrap justify-start">
     <a href="/dashboard"
       class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Home</a>
     <a href="/team"
@@ -22,22 +30,23 @@
   </nav>
 </header>
 
-<main class="max-w-3xl mx-auto pt-10 xl:max-w-none xl:ml-0 xl:mr-[15.5rem] xl:pr-16">
- <filler-content></filler-content>
+<!-- prompt: on xl screen sizes, let's take away the margin left -->
+<main class="max-w-3xl mx-auto pt-10 xl:ml-0">
+  <filler-content></filler-content>
 </main>
 
-<!-- prompt: let's stick the footer to the bottom no matter how little content there is on a page -->
+<!-- prompt: let's stick the footer to the bottom no matter how little content there is on a page. (Comment out main to see the problem.) -->
 <!-- clue: the body is already position relative -->
-<!-- answer:  absolute bottom-0 w-full-->
-<footer class="text-sm leading-6 mt-12 w-full">
+<!-- answer: absolute bottom-0 w-full-->
+<footer class="text-sm leading-6 mt-12 absolute bottom-0 w-full">
   <div class="mb-10 text-slate-700 font-semibold flex items-center dark:text-slate-200"><a
-      class="group flex items-center hover:text-slate-900 dark:hover:text-white" href="/"><svg
-        viewBox="0 0 3 6"
+      class="group flex items-center hover:text-slate-900 dark:hover:text-white" href="/"><svg viewBox="0 0 3 6"
         class="mr-3 w-auto h-1.5 text-slate-400 overflow-visible group-hover:text-slate-600 dark:group-hover:text-slate-300">
         <path d="M3 0L0 3L3 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
           stroke-linejoin="round"></path>
-      </svg>Previous Lesson on Basics</a><a class="group ml-auto flex items-center hover:text-slate-900 dark:hover:text-white"
-      href="/">Next Lesson<svg viewBox="0 0 3 6"
+      </svg>Previous Lesson on Basics</a><a
+      class="group ml-auto flex items-center hover:text-slate-900 dark:hover:text-white" href="/">Next Lesson<svg
+        viewBox="0 0 3 6"
         class="ml-3 w-auto h-1.5 text-slate-400 overflow-visible group-hover:text-slate-600 dark:group-hover:text-slate-300">
         <path d="M0 0L3 3L0 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
           stroke-linejoin="round"></path>
@@ -46,7 +55,8 @@
     <div class="mb-6 sm:mb-0 sm:flex">
       <p>Copyright © 2022 Alyssa loves UI.</p>
       <p class="sm:ml-4 sm:pl-4 sm:border-l sm:border-slate-200 dark:sm:border-slate-200/5"><a
-          class="hover:text-slate-900 dark:hover:bg-pink-500" href="https://twitter.com/alyssanicoll">Twitter DM is Always Open</a></p>
+          class="hover:text-slate-900 dark:hover:bg-pink-500" href="https://twitter.com/alyssanicoll">Twitter DM is
+          Always Open</a></p>
     </div><a class="hover:text-slate-900 dark:hover:bg-pink-500"
       href="https://github.com/alyssamichelle/tailwindcss-angular-workshop">Edit this code
       on GitHub</a>
