renaming anchors to modifiers

--- a/3.0_animated-button--/src/app/app.component.html
+++ b/3.0_animated-button--/src/app/app.component.html
@@ -1,6 +1,11 @@
+<h1 class="text-5xl my-8">Tailwind Animations</h1>
+
 <main class="flex flex-wrap gap-5 items-end">
 
-  <!-- Buttons look good and uniform but let's get rid of all the duplication! -->
+  <!-- final prompt: Buttons look good and uniform but let's get rid of all the duplication! -->
+
+  <!-- alyssa: walk through buttons, and create prompts. Plan for this demo is to show the finished one (no code just render) and have them imitate to the best of their abilities. Then do it together. The prompts should guide like way posts them along with me doing it live with them. -->
+  <!-- give this button a hover state -->
   <section class="flex-col gap-5 p-10 bg-slate-200">
     <p>A simple button with hover state.</p>
     <button class="my-16 py-2 px-3 text-xl bg-purple-100 text-purple-500">Let's Get Started</button>
