--- a/3.0_animated-modifiers--/src/app/app.component.html
+++ b/3.0_animated-modifiers--/src/app/app.component.html
@@ -1,3 +1,4 @@
+<h1 class="text-5xl my-8">Tailwind Modifiers</h1>
 <main class="flex flex-wrap gap-5 items-start">
 
   <section class="flex-col gap-5 p-10 bg-green-100" aria-labelledby="section-header-1">
@@ -12,7 +13,7 @@
     <h1 id="section-header-1" class="text-3xl mb-4 font-light">State Selectors</h1>
     <p>State Selectors include things like :hover, :focus, :required, and :visited. Let's give our anchor a visited style, the browser does this by default, so it is nice to override the browsers default with a branded option.
     </p>
-    <a href="https://amn.me/" class="hover:text-cyan-500 active:text-purple-500 visited:text-pink-500 cursor-pointer transition-colors">
+    <a href="https://amn.me/" target="_blank" class="hover:text-cyan-500 active:text-purple-500 visited:text-pink-500 cursor-pointer transition-colors">
       Gotta click me first
     </a>
   </section>
