finalize modifiers demo

--- a/3.1_animated-modifiers/src/app/app.component.html
+++ b/3.1_animated-modifiers/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-5xl my-8">Tailwind Modifiers</h1>
+<h1 class="text-5xl my-8">Tailwind Modifiers & Transitions</h1>
 <main class="flex flex-wrap gap-5 items-start">
 
   <section class="flex-col gap-5 p-10 bg-green-100" aria-labelledby="section-header-1">
