finalize animated buttons demo

--- a/3.1_animated-modifiers/src/app/app.component.html
+++ b/3.1_animated-modifiers/src/app/app.component.html
@@ -1,10 +1,12 @@
 <h1 class="text-5xl my-8">Tailwind Modifiers & Transitions</h1>
 <main class="flex flex-wrap gap-5 items-start">
+  
+  <!-- HOW MANY OF YOU ARE comfortable with and could explain the difference between CSS transitions and animations? -->
 
   <section class="flex-col gap-5 p-10 bg-green-100" aria-labelledby="section-header-1">
     <h1 id="section-header-1" class="text-3xl mb-4 font-light">Hover State</h1>
     <p>Let's implement these anchor styles now, using tailwind!</p>
-    <a class="hover:scale-125 inline-block origin-center cursor-pointer transition-transform">
+    <a class=" inline-block origin-center cursor-pointer hover:scale-125 transition-transform">
       Hoovers
     </a>
   </section>
