finalized animated full demo

--- a/3.1_animated-full/src/app/app.component.html
+++ b/3.1_animated-full/src/app/app.component.html
@@ -1,15 +1,8 @@
-<!-- style the header so that our escape hatch is always on the left and our nav is always on the right (no matter the screen size) with a growing/shrinking middle gap -->
+<!-- I used what we have learned in this section to create two real life examples. Attempt to add one more interaction to this page using modifiers, transitions, and animations. Best one wins an amazon giftcard. -->
 <header class="grid grid-cols-2 gap-x-5 items-end">
 
   <img src="assets/azalea.png" alt="azalea flower logo" class="max-w-[100px] px-3 py-2">
 
-  <!-- start with flex justify-center space-x-4 -->
-  <!-- prompt: our nav items need to align on the bottom of our header, change the classes to make it so! -->
-  <!-- answer: items-end on grid above -->
-
-  <!-- prompt: we would like the nav items to align left with the rest of the page content -->
-  <!-- clue: justify the items to the right side -->
-  <!-- answer: justify-end -->
   <nav class="flex justify-center space-x-4">
     <a href="/dashboard"
       class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900 hover:animate-pulse transition-colors">Home</a>
