--- a/2.1_layout-full/src/app/app.component.html
+++ b/2.1_layout-full/src/app/app.component.html
@@ -5,19 +5,6 @@
 
   <img src="assets/azalea.png" alt="azalea flower logo" class="max-w-[100px] px-3 py-2">
 
-  <!-- start with flex justify-center -->
-  <!-- prompt: our nav items need to align on the bottom of our header, change the classes to make it so! -->
-  <!-- answer: items-end on grid above -->
-
-  <!-- prompt: Let's wrap those nav items when there is no room for them. -->
-  <!-- clue: Feel free to sprinkle in some flex. -->
-  <!-- answer: flex-wrap -->
-
-  <!-- prompt: we would like the nav items to align left so that when wrapping they look a bit neater -->
-  <!-- clue: justify the items to the left side -->
-  <!-- answer: justify-start -->
-
-  <!-- This doesn't look great but you can now see all nav items on any screen size. We will fix up in next demo. -->
   <nav class="flex flex-wrap justify-start">
     <a href="/dashboard"
       class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Home</a>
@@ -30,15 +17,11 @@
   </nav>
 </header>
 
-<!-- prompt: on xl screen sizes, let's take away the margin left -->
 <main class="max-w-3xl mx-auto pt-10 xl:ml-0">
-  <filler-content></filler-content>
+  <!-- <filler-content></filler-content> -->
 </main>
 
-<!-- prompt: let's stick the footer to the bottom no matter how little content there is on a page. (Comment out main to see the problem.) -->
-<!-- clue: the body is already position relative -->
-<!-- answer: absolute bottom-0 w-full-->
-<footer class="text-sm leading-6 mt-12 absolute bottom-0 w-full">
+<footer class="text-sm leading-6 mt-12">
   <div class="mb-10 text-slate-700 font-semibold flex items-center dark:text-slate-200"><a
       class="group flex items-center hover:text-slate-900 dark:hover:text-white" href="/"><svg viewBox="0 0 3 6"
         class="mr-3 w-auto h-1.5 text-slate-400 overflow-visible group-hover:text-slate-600 dark:group-hover:text-slate-300">
