clean up styles.css in 1.1

--- a/1.1_basics/src/styles.css
+++ b/1.1_basics/src/styles.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply m-16 block;
+  @apply m-16 block bg-violet-500 text-white;
 }
 
 body > * {
@@ -12,8 +12,4 @@ body > * {
 
 button {
   @apply bg-purple-100 text-purple-700;
-}
-
-body {
-  @apply m-16 bg-violet-500 text-white;
 }
