--- a/5.1_advanced-plugins/src/app/app.component.html
+++ b/5.1_advanced-plugins/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1 class="text-3xl font-bold underline my-5">
-  Welcome to ng-conf!
+  Welcome Friends!
 </h1>
 <h2 class="text-2xl font-light my-5">
   Let's learn Tailwind CSS
