update arrow animation example

--- a/3.1_animated-full/src/app/app.component.html
+++ b/3.1_animated-full/src/app/app.component.html
@@ -17,7 +17,7 @@
 
 <main class="max-w-3xl mx-auto pt-10 xl:max-w-none xl:ml-0 xl:mr-[15.5rem] xl:pr-16">
   <filler-content></filler-content>
-  <div class="arrow fixed bottom-0 right-5 w-8 h-8 bg-purple-500 border border-slate-500 text-center leading-8 rounded text-white animate-bounce transition-opacity cursor-pointer" (click)="onClick()">↓
+  <div class="arrow fixed bottom-0 right-5 w-8 h-8 bg-purple-500 border border-slate-500 text-center leading-8 rounded text-white animate-bounce transition-opacity cursor-pointer" (click)="scrollDown()">↓
   </div>
 </main>
 
